1 june commit